--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,7 @@
     outline: none;
     border: none;
     background-color: #eda85d;
+    text-align: center;
 }
 .box{
     background-color: #e7dfdd;
