--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #a4a1a3;
+    background: #c4bdbd;
 }
 #title {
 }
