--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,9 @@
 .img{
     width: 640px;
     height: 480px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
 .btn{
     margin: 20px;
