--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 }
 .main{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,5 +36,6 @@
 .box{
     background-color: #e7dfdd;
     text-align: center;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    width: 1000px;
+    height: 2000px;
+}
