--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,8 @@
     text-align: center;
 }
 .box{
+    margin-top: 60px;
+    margin-bottom: 60px;
     background-color: #e7dfdd;
     text-align: center;
     width: 1000px;
