--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@
     text-align: center;
     font-size: 1.7rem;
 }
-#heading-1 {
+h1 {
     margin-top: 15px;
     font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
